# Sigyn

./: ..gitignore.swp  .clang-format  .gitignore  .gitmodules  AI_CONTEXT.md  Analysis.txt  DOTHISONAMD.md  LICENSE  MIGRATION_TEENSY_V2.md  MOVE_PROMPT.md  MasterToDo.md  Project.btproj  README.md  REFACTORING_PLAN.md  RELEASE_NOTES_2025_10_14.md  TODO.md  TODO_list.txt  YOLO26_OAKD_SETUP_COMPLETE.md  bashrc  board1_dump.txt  board2_dump.txt  platformio.ini  teensy_sensor.txt  teensy_sensor2.txt  topic_analysis_report.md  wifi_data.db
TeensyV2/: .clang-format  .env  .gitignore  Assessment_2025_07_19.md  BOARD2_CONFIG_INTEGRATION_SUMMARY.md  BOARD_STANDARDIZATION_SUMMARY.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CONFIG_INTEGRATION_SUMMARY.md  MIGRATION_COMPLETE.md  PLATFORMIO_SETUP.md  README.md  SAFETY_OVERVIEW.md  SDFAT_FIX_SUMMARY.md  TIMING_CLEANUP_SUMMARY.md  TODO.md  TeensyV2.code-workspace  check_upload_port.py  compile_commands.json  library.json  package.xml  pio_extra_flags.py  platformio.ini
TeensyV2/boards/: native.json
TeensyV2/docs/: ARCHITECTURE.md  Architecture.md  Config.md  INDEX.md  MessageProtocol.md  Message_Formats.md  ModuleSystem.md  Module_Reference.md  Performance.md  SafetySystem.md  Safety_System.md  SerialProtocol.md  Testing.md  board1_sample_output_20250719.txt  board1_sample_output_20250808.txt  board2_sample_out_20250807.txt  teensy_sensor2_log_sample.txt  teensy_sensor_log_sample.txt
TeensyV2/scripts/: ty_upload.sh
TeensyV2/src/: board1_main.cpp  board2_main.cpp  elevator_board.cpp  roboclaw_test.cpp
TeensyV2/test/: README.md  arduino_mock_impl.cpp  battery_monitor_test.cpp  battery_monitor_test_README.md  roboclaw_monitor_test.cpp  safety_coordinator_test.cpp  serial_manager_stub_impl.cpp  temperature_monitor_test.cpp
TeensyV2/tools/: upload_teensy_by_port.sh
base/: CMakeLists.txt  CMakePresets.json  package.xml
base/config/: bt1.xml  cartographer.lua  ekf.yaml  gz_bridge.yaml  laser_filters_angular.yaml  mapper_params_lifelong.yaml  mapper_params_online_async.yaml  navigation.yaml  navigation_sim.yaml  oakd_camera.yaml
base/launch/: cartographer.launch.py  foo.launch.py  lifelong.launch.py  map_cartographer.launch.py  map_slam_toolbox.launch.py  nav2_bringup.launch.py  navigation.launch.py  navigation_launch.py  precheck.launch.py  sigyn.launch.py  sigyn_sim.launch.py  sim.launch.py  slam.launch.py  slam_nav.launch.py
base/maps/: 20241210a.pgm  20241210a.yaml  20241210b.pgm  20241210b.yaml  20241210c.pgm  20241210c.yaml  20241210d.pgm  20241210d.yaml  20241210e.pgm  20241210e.yaml  20241210g.pgm  20241210g.yaml  20241210h.pgm  20241210h.yaml  20241210i.pgm  20241210i.yaml  20241210j.pgm  20241210j.yaml  20241210k.pgm  20241210k.yaml  20241210l.pgm  20241210l.yaml  20241210m.pgm  20241210m.yaml  20241210n.pgm  20241210n.yaml  b.pgm  map2.pgm  map2.yaml  map_20240306.yaml  map_20240306c.pgm  map_20240306c.xcf  my_map.yaml  my_map_lr.pgm  my_map_lr.yaml  my_map_lr2.pgm  my_map_mbr.pgm  my_map_mbr.yaml  snowberry4v31.pgm  snowberry4v31.yaml  (+1 more)
bluetooth_joystick/: CMakeLists.txt  README.md  package.xml
bluetooth_joystick/config/: bluetooth_joystick.yaml
bluetooth_joystick/launch/: bluetooth_joystick.launch.py
bluetooth_joystick/msg/: BluetoothJoystick.msg
bluetooth_joystick/src/: joystick_node.cpp
bluetooth_joystick/udev_rules/: 01-joystick.rules  93.nimbus.rules
can_do_challenge/: APPROACH_REDESIGN_PLAN.md  AvailableNodes.md  BACKGROUND_OF_CHALLENGE.md  CMakeLists.txt  DEBUGGING_SUMMARY.md  MANUAL_STEPPING.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  README.md  TODO.md  package.xml  test1_prompt.md  todo1.md
can_do_challenge/bt_xml/: center_can.xml  main.orig.xml  main.xml  oakd_detection_test1.xml  old.xml  raise_elevator.xml  step1_real_oakd.xml  step2_real_search.xml  step3_real_visual_acquire.xml  step4_elevator_height.xml  step5_elevator_height.xml
can_do_challenge/can_do_challenge/: simple_can_detector.py  spatial_detection_annotator.py  spatial_to_detection2d_converter.py
can_do_challenge/config/: can_locations.json
can_do_challenge/launch/: can_do_challenge_launch.py  can_do_sim_launch.py  manual_sim_launch.py  oakd_detection_test1.launch.py  step1_real_launch.py  step2_search_launch.py  step3_visual_acquire_launch.py  step4_can_detection_launch.py  step4_elevator_launch.py  step5_elevator_height_launch.py  view_world.launch.py
can_do_challenge/resources/: compile_hailo.py
can_do_challenge/src/: bt_nodes.cpp  bt_nodes_real.cpp  can_do_challenge_node.cpp  can_do_challenge_node_real.cpp  manual_controller_gui.py
description/: CMakeLists.txt  README.md  package.xml
description/config/: my_controllers.yaml
description/launch/: d.launch.py  description.launch.py  gripper_test.launch.py
description/meshes/: oakd_camera.dae
description/models/: sigyn_house.db
description/urdf/: base.urdf.xacro  camera.xacro  foo.md  (+23 more)
experiments/: CMakeLists.txt  package.xml
msgs/: CMakeLists.txt  package.xml
oakd_detector/: README_YOLO26.md  install_model.sh  package.xml  setup.cfg  setup.py
perimeter_roamer/: README.md  package.xml  setup.cfg  setup.py
perimeter_roamer_v2/: README.md  debug_perimeter_roamer.py  package.xml  setup.cfg  setup.py
perimeter_roamer_v3/: CMakeLists.txt  REACTIVE_NAVIGATION.md  README.md  TODO.md  bt_nodes.hpp  package.xml
pi_servo/: CMakeLists.txt  package.xml  pi_servo_plugin.xml
pi_servo1/: CMakeLists.txt  package.xml  pi_servo1.xml
r2c_tutorial/: CHECKLIST.md  CMakeLists.txt  PACKAGE_SUMMARY.md  README.md  package.xml  sensor_command_controller_plugin.xml  sensor_hardware_interface_plugin.xml  sensor_state_broadcaster_plugin.xml
rviz/: CMakeLists.txt  README.md  package.xml
sigyn_behavior_trees/: CMakeLists.txt  behavior_plugin.xml  notes.md  package.xml
sigyn_bringup/: CMakeLists.txt  package.xml
sigyn_hardware_interface/: CMakeLists.txt  chat.md  package.xml  sigyn_hardware_interface.xml
sigyn_house_patroller/: CMakeLists.txt  package.xml
sigyn_interfaces/: CMakeLists.txt  package.xml
sigyn_lidar/: CMakeLists.txt  README.md  TODO.md  package.xml
(+1271 files in other folders)
