<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teensy_v2</name>
  <version>2.0.0</version>
  <description>
    TeensyV2 embedded firmware for Sigyn House Patroller robot.
    Provides motor control, sensor integration, and safety coordination
    for the Teensy 4.1 based control boards.
  </description>
  
  <maintainer email="wimble@wimblerobotics.com">Wimble Robotics</maintainer>
  <license>Apache-2.0</license>
  
  <url type="website">https://github.com/wimblerobotics/Sigyn</url>
  <url type="repository">https://github.com/wimblerobotics/Sigyn</url>
  <url type="bugtracker">https://github.com/wimblerobotics/Sigyn/issues</url>
  
  <author email="wimble@wimblerobotics.com">Wimble Robotics</author>
  
  <!-- Build system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Test dependencies for PC-based unit testing -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
