<package format="2">
  <name>pi_servo</name>
  <version>0.0.0</version>
  <description>ROS2 package to control a pair of servos using ros2_control</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ros2_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
